fix another rho bug

--- a/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
+++ b/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,13 @@
     "    #extract time dependent rhos from params\n",
     "    rhos = params[0:3]\n",
     "    rhos_t = params[3:6]\n",
-    "    rhos_t_asi = np.argsort(rhos_t)\n",
-    "    rhos = np.cumsum(np.exp(rhos[rhos_t_asi]))*t.shape[0]\n",
-    "    rhos_t = np.clip(rhos_t[rhos_t_asi].astype(np.int32),0,t.shape[0])\n",
+    "    rhos_t = np.cumsum(np.exp(rhos_t))*t.shape[0]\n",
+    "    rhos_t = np.clip(rhos_t.astype(np.int32),0,t.shape[0])\n",
     "    \n",
     "    #construct dense rhos array\n",
     "    rho = np.ones((t.shape[0]))\n",
     "    for i in range(rhos_t.shape[0]):\n",
-    "        rho[rhos_t[i]:] = np.tanh(rhos[i])    \n",
+    "        rho[rhos_t[i]:] = (np.tanh(rhos[i])+1)/2    \n",
     "\n",
     "    beta, alpha, gamma, d = params[6:]\n",
     "    dt = t[1] - t[0]\n",
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,521 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "params.shape (10,)\n",
-      "CPU times: user 448 ms, sys: 60.1 ms, total: 508 ms\n",
-      "Wall time: 473 ms\n"
+      "CPU times: user 279 ms, sys: 4.02 ms, total: 283 ms\n",
+      "Wall time: 282 ms\n"
      ]
     }
    ],
