move counting noise to data.py

--- a/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
+++ b/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "from numba import jit\n",
-    "from data.data import enhance_contrast\n",
+    "from data.data import enhance_contrast, add_counting_noise\n",
     "from deep_bayes import theta as thetaed\n",
     "from deep_bayes.models import BayesFlow, SequenceNetwork\n",
     "from deep_bayes.training import train_online\n",
@@ -233,17 +233,7 @@
     "    #x = np.apply_along_axis(forward_model, axis=1, arr=thetap, t=t, **args)\n",
     "    x = forward_model(thetap, t)\n",
     "    \n",
-    "    # have binomial counting noise on infected rate\n",
-    "    delta_I = x[:,1:,1]-x[:,:-1,1]\n",
-    "    dIcounts = (delta_I*N).astype(np.int64)\n",
-    "    new_deltas = np.random.binomial(np.abs(dIcounts),otheta[:,0:1])\n",
-    "    new_deltas = np.where(dIcounts > 0, new_deltas, -new_deltas)/N\n",
-    "    Inew = np.cumsum(new_deltas,axis=1)\n",
-    "\n",
-    "    # compute correction factor for measured R\n",
-    "    Rfactors = Inew / (x[:,1:,1]+1e-10)\n",
-    "    x[:,1:,1] = Inew\n",
-    "    x[:,1:,-1] *= Rfactors\n",
+    "    x = add_counting_noise(x,N,otheta[:,0:1])\n",
     "    \n",
     "    x = np.clip(x,0,1) # FIXME: WHY ARE THERE SOMETIMES VALUES <0 ?????????\n",
     "    x = enhance_contrast(x)\n",
@@ -334,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 186 ms, sys: 1.12 ms, total: 188 ms\n",
-      "Wall time: 178 ms\n"
+      "CPU times: user 189 ms, sys: 5.06 ms, total: 194 ms\n",
+      "Wall time: 183 ms\n"
      ]
     }
    ],
