move priors to data/priors, add E0 parameter to theta

--- a/apply_learned_rho_to_data.ipynb
+++ b/apply_learned_rho_to_data.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "\n",
     "from numba import jit\n",
+    "from data import priors\n",
     "from data.data import enhance_contrast\n",
     "from deep_bayes.models import BayesFlow, SequenceNetwork\n",
     "from deep_bayes.training import train_online\n",
@@ -50,7 +51,7 @@
     }
    ],
    "source": [
-    "param_names = [r'rho1',r'rho2',r'rho3',r'rho-t1',r'rho-t2',r'rho-t3',r'p', r'$\\beta$', r'$\\alpha$', r'$\\gamma$', r'$d$']\n",
+    "param_names = priors.rh_names + priors.th_names \n",
     "theta_dim = len(param_names)\n",
     "\n",
     "# Network hyperparameters\n",
