--- a/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
+++ b/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
@@ -29,6 +29,7 @@
     "\n",
     "from numba import jit\n",
     "from data.data import enhance_contrast, add_counting_noise\n",
+    "from data import priors\n",
     "from deep_bayes import theta as thetaed\n",
     "from deep_bayes.models import BayesFlow, SequenceNetwork\n",
     "from deep_bayes.training import train_online\n",
@@ -82,10 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th_low = [0.01, 0.8, 0.05, 0.05, 0.001]\n",
-    "th_high=[1.0, 3.25, 0.3, 0.3, 0.1]\n",
-    "rh_low = [0,0,0,0,0,0]\n",
-    "rh_high = [1,1,1,1,1,1]\n",
     "\n",
     "def decode_params(theta):\n",
     "    squeeze=False\n",
@@ -93,46 +90,27 @@
     "        theta = theta[None,:]\n",
     "        squeeze = True\n",
     "    dtheta = theta.copy()    \n",
-    "    dtheta[:,0:6] = thetaed.decode(theta[:,0:6],rh_low,rh_high)\n",
-    "    dtheta[:,6:] = thetaed.decode(theta[:,6:],th_low,th_high)\n",
+    "    dtheta[:,0:6] = thetaed.decode(theta[:,0:6],priors.rh_low,priors.rh_high)\n",
+    "    dtheta[:,6:] = thetaed.decode(theta[:,6:],priors.th_low,priors.th_high)\n",
     "    \n",
     "    if squeeze:\n",
     "        dtheta = dtheta.squeeze()\n",
     "        \n",
     "    return dtheta\n",
     "\n",
-    "def prior(batch_size):\n",
-    "    \"\"\"\n",
-    "    Samples from the prior 'batch_size' times.\n",
-    "    ----------\n",
-    "    \n",
-    "    Arguments:\n",
-    "    batch_size : int -- the number of samples to draw from the prior\n",
-    "    ----------\n",
-    "    \n",
-    "    Output:\n",
-    "    theta : np.ndarray of shape (batch_size, theta_dim) -- the samples batch of parameters\n",
-    "    \"\"\"\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    theta = np.random.uniform(th_low, \n",
-    "                              th_high, size=(batch_size, 5))\n",
-    "    \n",
-    "    return theta\n",
     "\n",
     "#@jit(parallel=True,nopython=False)\n",
     "def forward_model(aparams, t):\n",
     "    \"\"\"Forward model of the SIRD.\"\"\"\n",
     "    result = np.zeros((aparams.shape[0],t.shape[0],4))\n",
-    "    arh_params = thetaed.decode(aparams[:,5+0:5+6],rh_low, rh_high)\n",
-    "    ath_params = thetaed.decode(aparams[:,5+6:],th_low, th_high)\n",
+    "    arh_params = thetaed.decode(aparams[:,5+0:5+6],priors.rh_low, priors.rh_high)\n",
+    "    ath_params = thetaed.decode(aparams[:,5+6:],priors.th_low, priors.th_high)\n",
     "    \n",
     "    for pn in range(aparams.shape[0]):\n",
     "        #print(pn)\n",
     "        params = aparams[pn,:]\n",
-    "        S_0, E_0, I_0, D_0, R_0 = params[:5]\n",
-    "        S, E, I, D, R = [S_0], [E_0], [I_0], [D_0], [R_0]\n",
+    "        N, S_0, I_0, D_0, R_0 = params[:5]\n",
+    "        S, I, D, R = [S_0], [I_0], [D_0], [R_0]\n",
     "\n",
     "        params = params[5:]\n",
     "\n",
@@ -148,7 +126,9 @@
     "        for i in range(rhos_t.shape[0]):\n",
     "            rho[rhos_t[i]:] = rhos[i]   \n",
     "        th_params = ath_params[pn]\n",
-    "        p, beta, alpha, gamma, d = th_params\n",
+    "        E_0, p, beta, alpha, gamma, d = th_params\n",
+    "        E = [E_0/N]\n",
+    "        \n",
     "        dt = t[1] - t[0]\n",
     "        #print(rho, th_params)\n",
     "        for i,_ in enumerate(t[1:]):\n",
@@ -190,19 +170,17 @@
     "    theta : tf.Tensor or np.ndarray of shape (batch_size, theta_dim) - the data gen parameters \n",
     "    x     : tf.Tensor of np.ndarray of shape (batch_size, n_obs, x_dim)  - the generated data\n",
     "    \"\"\"\n",
-    "    N = 1e5\n",
     "    S0 = np.random.randint(1*1e6,400*1e6,size=(batch_size,1))\n",
-    "    E0 = np.random.randint(3,100,size=(batch_size,1))\n",
     "    I0 = np.zeros((batch_size,1))\n",
     "    D0 = np.zeros((batch_size,1))\n",
     "    R0 = np.zeros((batch_size,1))\n",
     "    \n",
-    "    init_vals = np.concatenate([S0/S0, E0/S0, I0, D0, R0],axis=1)\n",
+    "    init_vals = np.concatenate([S0, S0/S0, I0, D0, R0],axis=1)\n",
     "    \n",
     "    # Sample from prior\n",
     "    # theta is a np.array of shape (batch_size, theta_dim)\n",
-    "    otheta = prior(batch_size)\n",
-    "    theta = thetaed.encode(otheta,th_low, th_high)\n",
+    "    otheta = priors.prior_sample(batch_size)\n",
+    "    theta = thetaed.encode(otheta,priors.th_low, priors.th_high)\n",
     "    \n",
     "    if t_obs is None:\n",
     "        t_obs = np.random.randint(t_min, t_max+1)\n",
@@ -220,7 +198,7 @@
     "    \n",
     "    #print(\"atanh_rhos\", rhos)\n",
     "    # construct rhoparam matrix\n",
-    "    rhoparams = thetaed.encode(np.concatenate([rhos,rhos_t],axis=1), rh_low, rh_high)\n",
+    "    rhoparams = thetaed.encode(np.concatenate([rhos,rhos_t],axis=1), priors.rh_low, priors.rh_high)\n",
     "    \n",
     "    #construct new theta\n",
     "    theta_all = np.concatenate([rhoparams, theta],axis=1)\n",
@@ -233,7 +211,7 @@
     "    #x = np.apply_along_axis(forward_model, axis=1, arr=thetap, t=t, **args)\n",
     "    x = forward_model(thetap, t)\n",
     "    \n",
-    "    x = add_counting_noise(x,N,otheta[:,0:1])\n",
+    "    x = add_counting_noise(x,S0,otheta[:,1:2])\n",
     "    \n",
     "    x = np.clip(x,0,1) # FIXME: WHY ARE THERE SOMETIMES VALUES <0 ?????????\n",
     "    x = enhance_contrast(x)\n",
@@ -287,7 +265,7 @@
     "\n",
     "\n",
     "# Training and optimizer hyperparameters\n",
-    "ckpt_file = \"SEIDR_learn_rho\"\n",
+    "ckpt_file = \"SEIDR_learn_rho_E0\"\n",
     "batch_size = 64\n",
     "epochs = 1000\n",
     "iterations_per_epoch = 500\n",
@@ -321,11 +299,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 189 ms, sys: 5.06 ms, total: 194 ms\n",
-      "Wall time: 183 ms\n"
+     "ename": "ValueError",
+     "evalue": "p < 0, p > 1 or p contains NaNs",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-a4c4284f26c1>\u001b[0m in \u001b[0;36mdata_generator\u001b[0;34m(batch_size, t_obs, t_min, t_max, dt, to_tensor, **args)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforward_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthetap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madd_counting_noise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0motheta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# FIXME: WHY ARE THERE SOMETIMES VALUES <0 ?????????\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Projects/BayesCorona/data/data.py\u001b[0m in \u001b[0;36madd_counting_noise\u001b[0;34m(x, N, p)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0mdelta_I\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0mdIcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdelta_I\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m     \u001b[0mnew_deltas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbinomial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdIcounts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m     \u001b[0mnew_deltas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdIcounts\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_deltas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mnew_deltas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0mInew\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_deltas\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.binomial\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m_common.pyx\u001b[0m in \u001b[0;36mnumpy.random._common.check_array_constraint\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: p < 0, p > 1 or p contains NaNs"
      ]
     }
    ],
